<resources>
    <string name="app_name">equipoTres</string>
    <string name="app_splash">Pico Botella</string>
    <string name="bt_presioname">Presióname</string>
    <string name="reglas">Reglas de Juego</string>
    <string name="juego">¿Cómo se juega?</string>
    <string name="retos">Retos</string>
    <string name="addRetos">Agregar reto</string>
    <string name="readReto">Escriba el reto</string>
    <string name="ganador">¿Quién gana?</string>
    <string name="comoJugar">Los jugadores forman un círculo y en el centro colocan el dispositivo
        móvil, luego tocan el botón parpadeante para girar la botella. El jugador que señale la
        botella debe cumplir el reto que lanza la app, de lo contrario abandona el juego.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gana_el_ltimo_jugador_que_no_abandone_el_juego">Gana el último jugador que no abandone el juego.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_title">"Pico Botella"</string>
    <string name="email_hint">"Email"</string>
    <string name="pass_hint">"Password"</string>
    <string name="button_login">"Login"</string>
    <string name="cerrar">"Cerrar"</string>


</resources>