

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/dark_gray">

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/dark_gray"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <!-- ImageButton de la flecha dentro de la Toolbar -->
            <ImageButton
                android:id="@+id/arrow_left"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:src="@drawable/arrow_left"
                android:layout_gravity="start"
                android:layout_marginEnd="16dp"
                app:tint="@color/carrot_orange"
                android:scaleType="fitCenter"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reglas"
                android:textColor="@color/carrot_orange"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

        </androidx.appcompat.widget.Toolbar>

        <!-- Título 1: ¿Cómo se llama? -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/juego"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <!-- Contenido del primer título -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/comoJugar"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <!-- Título 2: ¿Quién gana? -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/ganador"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <!-- Contenido del segundo título -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/gana_el_ltimo_jugador_que_no_abandone_el_juego"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <!-- Animación Lottie -->
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/trifoe_reto" />
    </LinearLayout>
</layout>
