<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clContenedor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="@color/black"
        tools:context=".view.LoginActivity">

        <TextView
            android:id="@+id/tvTitleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:fontFamily="@font/splash_font"
            android:padding="20dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tilEmail" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white"
            app:boxStrokeColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tilPass"
            app:endIconMode="clear_text"
            >

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/hint_color"
                android:textColor="@color/white"
                android:padding="16dp"
                android:textSize="18sp"
                android:maxLength="40"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="true"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white"
            app:boxStrokeColor="@color/white"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/tilEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:startIconTint="@color/white"
            app:endIconMode="password_toggle">

            <EditText
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="10"
                android:hint="@string/pass_hint"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:padding="16dp"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/carrot_orange"
            android:text="@string/button_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilPass" />


        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Registrarse"
            android:textStyle="bold"
            android:clickable="true"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/viewOndas"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:background="@drawable/ondas"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints" />





    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>